--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,11 +18,14 @@ jobs:
             - name: "install dependecies"
               run : npm install
 
-            - name: "install pm2"
-              run: npm install pm2 -g
+            # - name: "install pm2"
+            #   run: npm install pm2 -g
               
             # - name: 'run tests'
             #   run: npm test
+
+            - name: "deploy to aws"
+              run: pm2 restart server
              
               
 
